--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/1.jpeg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Kewinnossh</h2>
+							<p>Pic muna bago magsamgy at magdefense</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/2.jpeg"><img src="images/thumbs/02.jpg" alt="" /></a>
