--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/1.jpeg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/1.jpeg" data-position="left center"><img src="images/thumbs/1.jpeg" alt="" /></a>
 							<h2>Kewinnossh</h2>
 							<p>Pic muna bago magsamgy at magdefense</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/2.jpeg"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/2.jpeg"><img src="images/thumbs/2.jpeg" alt="" /></a>
 							<h2>Vivamus convallis libero</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/3.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/3.jpg" data-position="top center"><img src="images/thumbs/3.jpg" alt="" /></a>
 							<h2>Nec accumsan enim felis</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/4.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/4.jpg"><img src="images/thumbs/4.jpg" alt="" /></a>
 							<h2>Donec maximus nisi eget</h2>
 							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
 						</article>
@@ -96,7 +96,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+							<!-- <li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li> -->
 						</ul>
 					</footer>
 
